--- a/proj2_client/res/layout/activity_game.xml
+++ b/proj2_client/res/layout/activity_game.xml
@@ -11,7 +11,7 @@
 >
 
     <GridLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:columnCount="3"
         android:focusable="false"
@@ -26,10 +26,10 @@
             android:gravity="center" >
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/txtP1Score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5"
+                android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="96sp" />
 
@@ -43,10 +43,10 @@
                 android:textSize="64sp" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/txtP2Score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2"
+                android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="96sp" />
         </LinearLayout>
@@ -58,15 +58,17 @@
             android:layout_column="2"
             android:layout_gravity="center_horizontal|top"
             android:layout_row="1"
+            android:paddingBottom="8dp"
+            android:paddingTop="24dp"
             android:text="@string/ingame_score"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <lpoo.proj2.GameView
             android:id="@+id/gameView"
-            android:layout_width="300dp"
-            android:layout_height="250dp"
+            android:layout_width="wrap_content"
+            android:layout_height="310dp"
             android:layout_column="2"
-            android:layout_gravity="center"
+            android:layout_gravity="start|center_vertical"
             android:layout_row="8"
             android:paddingLeft="64dp"
             android:paddingRight="64dp" />
