--- a/proj2_client/res/layout-land/activity_main.xml
+++ b/proj2_client/res/layout-land/activity_main.xml
@@ -23,7 +23,6 @@
 
 			<ImageView
 			    android:id="@+id/imageView"
-			    android:contentDescription="@string/menu_hostip"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_gravity="center_horizontal"
@@ -79,12 +78,12 @@
 				>
 
 				<TextView
-					android:id="@+id/textView"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_column="0"
-					android:layout_gravity="start|center"
-					android:text="@string/menu_hostip"/>
+				    android:id="@+id/textView"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:layout_column="0"
+				    android:layout_gravity="start|center"
+				    android:text="@string/menu_hostip" />
 
 				<EditText
 				    android:id="@+id/txtIP"
@@ -92,7 +91,8 @@
 				    android:layout_height="wrap_content"
 				    android:layout_column="1"
 				    android:layout_gravity="start"
-				    android:inputType="numberDecimal"
+					android:inputType="number|numberDecimal"
+					android:digits="0123456789."
 				    android:maxLength="16"
 				    android:minLines="0"
 				    android:minWidth="150dp"
@@ -105,12 +105,12 @@
 				android:layout_height="fill_parent">
 
 				<TextView
-					android:id="@+id/textView5"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_column="0"
-					android:layout_gravity="center|start"
-					android:text="@string/menu_port"/>
+				    android:id="@+id/textView5"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:layout_column="0"
+				    android:layout_gravity="center|start"
+				    android:text="@string/menu_port" />
 
 				<EditText
 				    android:id="@+id/txtPort"
@@ -150,12 +150,12 @@
 				android:layout_height="fill_parent">
 
 				<TextView
-					android:id="@+id/lblUsername"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_column="0"
-					android:layout_gravity="start|center"
-					android:text="@string/menu_username"/>
+				    android:id="@+id/lblUsername"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:layout_column="0"
+				    android:layout_gravity="start|center"
+				    android:text="@string/menu_username" />
 
 				<EditText
 				    android:id="@+id/txtUsername"
@@ -175,12 +175,12 @@
 				android:layout_height="fill_parent">
 
 				<TextView
-					android:id="@+id/lblColor"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_column="0"
-					android:layout_gravity="center|start"
-					android:text="@string/menu_color"/>
+				    android:id="@+id/lblColor"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:layout_column="0"
+				    android:layout_gravity="center|start"
+				    android:text="@string/menu_color" />
 
 				<Spinner
 					android:id="@+id/spnColor"
